diplom part 2