@@ -289,7 +289,6 @@ public class EventServiceImpl implements EventService {
                                                String rangeEnd, int from, int size) {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
-        // Правильная инициализация дат
         LocalDateTime startDateTime;
         LocalDateTime endDateTime;
         if (rangeStart != null) {
@@ -303,7 +302,6 @@ public class EventServiceImpl implements EventService {
             endDateTime = null;
         }
 
-        // Преобразование states ОДИН раз
         List<Status> statusList;
         if (states != null && !states.isEmpty()) {
             statusList = states.stream()
@@ -313,22 +311,20 @@ public class EventServiceImpl implements EventService {
             statusList = null;
         }
 
-        // Получаем ВСЕ события
         List<Event> events = eventRepository.findAllEvents();
 
-        // ФИЛЬТРАЦИЯ В JAVA КОДЕ
         events = events.stream()
                 .filter(e -> users == null || users.isEmpty() || users.contains(e.getInitiator().getId()))
                 .filter(e -> statusList == null || statusList.isEmpty() || statusList.contains(e.getState()))
                 .filter(e -> categories == null || categories.isEmpty() || categories.contains(e.getCategory().getId()))
                 .filter(e -> startDateTime == null || e.getEventDate().isAfter(startDateTime) || e.getEventDate().isEqual(startDateTime))
                 .filter(e -> endDateTime == null || e.getEventDate().isBefore(endDateTime) || e.getEventDate().isEqual(endDateTime))
-                .collect(Collectors.toList());  // Используем collect
+                .toList();
 
         List<EventFullDto> result = events.stream()
                 .map(e -> eventMapper.toEventFullDto(e, userMapper.toUserShortDto(e.getInitiator()),
                         eventMapper.toLocationDto(e.getLocation())))
-                .collect(Collectors.toList());
+                .toList();
 
         return result.stream()
                 .skip(from)
